# tatic_ascii_server

./: Cargo.toml
src/: logging.rs  main.rs  routes.rs  state.rs  websocket.rs
tests/: test_api.rs
