[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tatic_lib = { path = "../tatic_lib" }
anyhow = "1.0.100"
axum = { version = "0.8.5", features = ["macros", "ws"] }
chrono = "0.4.42"
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.47.1"
tokio-tungstenite = "0.28.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = "1.18.1"

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
rstest = "0.26.1"
test-case = "3.3.1"
