[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tatic_lib = { path = "../tatic_lib" }

anyhow = "1.0.100"
axum = { version = "0.8.5", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.28.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version ="0.3", features = ["env-filter", "fmt", "std"]}
uuid = { version ="1.18.1", features = ["v4", "serde"]}

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
rstest = "0.26.1"
test-case = "3.3.1"
